Fixed layout bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,6 +14,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+#__next {
+  height: 100%;
 }
 
 #crmWebToEntityForm.zcwf_lblLeft {
@@ -107,12 +111,7 @@ a {
 .zcwf_lblLeft .zcwf_row {
   margin: 15px 0px;
 }
-.zcwf_lblLeft .formsubmit {
-  margin-right: 5px;
-  cursor: pointer;
-  color: #333;
-  font-size: 12px;
-}
+
 .zcwf_lblLeft .zcwf_privacy_txt {
   color: rgb(0, 0, 0);
   font-size: 12px;
@@ -125,8 +124,9 @@ a {
 }
 .zcwf_lblLeft .zcwf_button {
   font-size: 12px;
-  color: #333;
-  border: 1px solid #ccc;
+  color: #ffbd59;
+  border: 1px solid #ffbd59;
+  background-color: transparent;
   padding: 3px 9px;
   border-radius: 4px;
   cursor: pointer;
@@ -134,6 +134,13 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.zcwf_lblLeft .formsubmit {
+  margin-right: 5px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 12px;
+  background-color: #ffbd59;
 }
 .zcwf_lblLeft .zcwf_tooltip_over {
   position: relative;
